themes/src/sass/gtk/_common-4.0.scss
/***************
 * Base States *
 ***************/
.background {
	background-color: $background;
	color: $text;
}

#desktopwindow.background {
	background-color: transparent;
}

dnd {
	color: on($background);
}

.normal-icons {
	-gtk-icon-size: 16px;
}

.large-icons {
	-gtk-icon-size: 32px;

	.aboutdialog & {
		-gtk-icon-size: 128px;
	}
}

spinner:disabled,
arrow:disabled,
scrollbar:disabled,
check:disabled,
radio:disabled,
treeview.expander:disabled {
	-gtk-icon-filter: opacity(0.5);
}

%view,
.view {
	background-color: if($variant == 'light', rgba($base, 0.4), $fill);
	color: $text;

	// &:selected:hover { box-shadow: inset 0 0 0 9999px rgba($primary, 0.08); }

	&:disabled {
		color: $text-disabled;
	}

	&:selected {
		color: $text;
		@extend %selected_items;
	}
}

textview {
	// FIXME: we need to override background-color to ensure text rendering

	text {
		background-color: $base;
		selection {
			&:focus,
			& {
				@extend %selected_items_primary;
			}
		}
	}

	border {
		background-color: $base-alt;
		color: $text-secondary; // FIXME: not working
	}
}

iconview {
	@extend %view;
	&:hover,
	&:selected {
		border-radius: $corner-radius / 2;
	}
}

rubberband {
	border: 1px solid $primary;
	background-color: rgba($primary, 0.3);
}

flowbox {
	> rubberband {
		@extend rubberband;
	}

	> flowboxchild {
		padding: 4px;
		border-radius: $corner-radius;

		&:selected {
			@extend %selected_items_color;
		}
	}
}

.content-view .tile {
	&:selected {
		background-color: transparent;
	}
}

gridview {
	> rubberband {
		@extend rubberband;
	}

	> child {
		padding: 3px;

		&:selected {
			outline-color: $overlay-selected;

			@extend %selected_items;
		}

		box {
			//cells
			border-spacing: $space-size + 2px; //label separation
			margin: $space-size * 2;
		}
	}
}

coverflow cover {
	color: $text;
	background-color: $base;
	border: 1px solid black;
}

label {
	&.separator {
		color: $text-secondary;
	}

	> selection {
		@extend %selected_items_primary;
	}

	&:disabled {
		opacity: 1;
		color: $text-disabled;

		// selection { color: $text-disabled; }

		headerbar &,
		tab &,
		button & {
			color: inherit;
			opacity: 1;
		}
	}

	&.osd {
		border-radius: $corner-radius;
		background-color: $tooltip;
		color: on($tooltip);
	}
}

%dim-label,
.dim-label {
	color: $text-secondary;
	opacity: 1;
}

.accent {
	color: $primary;
}

.success {
	color: $success;
}

.warning {
	color: $warning;
}

.error {
	color: $error;
}

// General Typography
.large-title {
	font-weight: 300;
	font-size: 24pt;
}

.title {
	&-1 {
		font-weight: 800;
		font-size: 20pt;
	}

	&-2 {
		font-weight: 800;
		font-size: 15pt;
	}

	&-3 {
		font-weight: 700;
		font-size: 15pt;
	}

	&-4 {
		font-weight: 700;
		font-size: 13pt;
	}
}

.heading {
	font-weight: 700;
	font-size: 11pt;
}

.body {
	font-weight: 400;
	font-size: 11pt;
}

.caption {
	font-weight: 400;
	font-size: 9pt;

	&-heading {
		font-weight: 700;
		font-size: 9pt;
	}
}

window.assistant {
	.sidebar {
		padding: 4px 0;
		// background-color: $base;
		// border-top: 1px solid $divider;
	}

	// &.csd .sidebar { border-top-style: none; }

	.sidebar label {
		min-height: $medium-size;
		padding: 0 $space-size * 2;
		color: $text-disabled;
		font-weight: 500;

		&.highlight {
			color: $text;
		}
	}
}

%osd {
	color: on($base);
	background-color: $base;
	background-clip: padding-box;
	border-radius: $corner-radius;
	border: none;
	box-shadow:
		$shadow-z4,
		inset 0 1px highlight($surface);
}

.osd {
	@extend %osd;
	padding: $space-size;
	margin: $space-size;

	&.circular {
		border-radius: $circular-radius;
	}
}

/*********************
 * Spinner Animation *
 *********************/
@keyframes spin {
	to {
		transform: rotate(1turn);
	}
}

spinner {
	background: none;
	opacity: 0; // non spinning spinner makes no sense
	-gtk-icon-source: -gtk-icontheme('process-working-symbolic');

	&:checked {
		opacity: 1;
		animation: spin 1s linear infinite;

		&:disabled {
			opacity: 0.5;
		}
	}
}
/* ... */

